--- a/node/views/package.json
+++ b/node/views/package.json
@@ -11,19 +11,21 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "ejs": "^3.1.10",
-    "express": "^4.19.2",
     "core-js": "^3.37.1",
     "css-loader": "^7.1.2",
+    "dotenv": "^16.4.5",
+    "ejs": "^3.1.10",
+    "express": "^4.19.2",
+    "mongoose": "^8.5.1",
     "regenerator-runtime": "^0.14.1",
     "style-loader": "^4.0.0"
   },
   "devDependencies": {
-    "nodemon": "^3.1.4",
     "@babel/cli": "^7.24.8",
     "@babel/core": "^7.24.9",
     "@babel/preset-env": "^7.24.8",
     "babel-loader": "^9.1.3",
+    "nodemon": "^3.1.4",
     "webpack": "^5.93.0",
     "webpack-cli": "^5.1.4"
   }
