--- a/node/views/package.json
+++ b/node/views/package.json
@@ -11,11 +11,14 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "connect-flash": "^0.1.1",
+    "connect-mongo": "^5.1.0",
     "core-js": "^3.37.1",
     "css-loader": "^7.1.2",
     "dotenv": "^16.4.5",
     "ejs": "^3.1.10",
     "express": "^4.19.2",
+    "express-session": "^1.18.0",
     "mongoose": "^8.5.1",
     "regenerator-runtime": "^0.14.1",
     "style-loader": "^4.0.0"
