--- a/node/views/package.json
+++ b/node/views/package.json
@@ -15,10 +15,12 @@
     "connect-mongo": "^5.1.0",
     "core-js": "^3.37.1",
     "css-loader": "^7.1.2",
+    "csurf": "^1.11.0",
     "dotenv": "^16.4.5",
     "ejs": "^3.1.10",
     "express": "^4.19.2",
     "express-session": "^1.18.0",
+    "helmet": "^7.1.0",
     "mongoose": "^8.5.1",
     "regenerator-runtime": "^0.14.1",
     "style-loader": "^4.0.0"
